refactored the bejeezus

--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "ocean-site-content",
   "version": "1.0.0",
   "description": "Tool to extract content from various sites for Ocean supplemental search",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "spider": "node index.js"
+    "spider": "node src/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chadananda/ocean-site-content.git"
-  },
-  "bin": {
-    "ocnspider": "./index.js"
   },
   "author": "Chad Jones <chadananda@gmail.com> (http://bahai-education.org/)",
   "license": "ISC",
@@ -24,6 +21,7 @@
     "cheerio": "^1.0.0-rc.2",
     "fs": "0.0.1-security",
     "jsonfile": "^4.0.0",
+    "mkdirp": "^0.5.1",
     "node-spider": "^1.4.1",
     "turndown": "^4.0.1"
   }
