--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "spider": "node src/index.js"
+    "spider": "node src/index.js",
+    "debug": "node --inspect src/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "file-exists": "^5.0.1",
     "fs": "0.0.1-security",
     "jsonfile": "^4.0.0",
+    "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "node-spider": "^1.4.1",
     "turndown": "^4.0.1"
