--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "spider": "node src/index.js",
+    "debug-brk": "node --inspect-brk src/index.js",
     "debug": "node --inspect src/index.js"
   },
   "repository": {
