--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "spider": "node src/index.js",
-    "debug-brk": "node --inspect-brk src/index.js",
-    "debug": "node --inspect src/index.js"
+    "debug-no-brk": "node --inspect src/index.js",
+    "debug": "node --inspect-brk src/index.js"
   },
   "repository": {
     "type": "git",
