--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "spider": "node src/index.js",
     "debug-no-brk": "node --inspect src/index.js",
-    "debug": "node --inspect-brk src/index.js"
+    "debug": "node --inspect-brk src/index.js",
+    "tools": "node src/tools.js",
+    "tools-debug": "node --inspect-brk src/tools.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "crypto-js": "^3.1.9-1",
+    "diff": "^3.5.0",
     "file-exists": "^5.0.1",
     "fs": "0.0.1-security",
     "jsonfile": "^4.0.0",
